Closed Bug 1158507 Opened 11 years ago Closed 11 years ago

Location label in url bar does not provide the webpage address for accessibility (says just "URL")

Categories

(Firefox for iOS :: General, defect)

Other
iOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: dusek, Assigned: dusek)

References

(Blocks 1 open bug)

Details

(Keywords: access)

Attachments

(1 file)

47 bytes, text/x-github-pull-request
st3fan
: review+
Details | Review
User Agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 10_10_3) AppleWebKit/600.5.17 (KHTML, like Gecko) Version/8.0.5 Safari/600.5.17 Steps to reproduce: Load a webpage and put VoiceOver cursor on it. Actual results: VoiceOver says "URL". (The "URL" accessibility label got added because of testing with KIF.) Expected results: VoiceOver says a message that includes the displayed address, e.g. "www.cnn.com". One solution could be to leave the accessibilityLabel fixed at "URL" (maybe only change it to something more user-friendly like "Address") and set accessibilityValue with the address; VoiceOver would then say "URL, www.cnn.com". But in case of the "Search or enter address" state, it would be preferable to have "Search or enter address" as the accessibilityLabel (which is default as it is the displayed title, i.e. it could be achieved by setting accessibilityLabel to nil) and having no accessibilityValue. Another solution (which would mimic Safari accessibility) would be to keep things simple and have accessibility label to be the address, with no accessibility value. This is btw. what we get by default if we do not set accessibilityLabel explicitly on the label (i.e. UILabel implicitly has no accessibilityValue and returns its title in accessibilityLabel). I am leaning to this solution. In the case of the second solution, accessibility tests relying on "URL" accessibility label of the location label will need to be modified. Either to refer to the displayed string instead of "URL" (i.e. refer to "Search or enter address" or "www.cnn.com"), or add accessibilityIdentifier to the location label and use the identifier KIF methods from IdentifierTests category on KIFUITestActor (in KIF/KIFUITestActor-IdentifierTests.h).
Blocks: iosa11y
Status: UNCONFIRMED → NEW
Ever confirmed: true
Keywords: access
Attached file Pull request
Attachment #8597748 - Flags: review?
Attachment #8597748 - Flags: review? → review?(sarentz)
Merged. Thank you very much!
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Attachment #8597748 - Flags: review?(sarentz) → review+
Assignee: nobody → dusek
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: