Bug 1158507 - Pre: make KIF accessibility identifier methods available to tests